--- a/PlantPathology2020/ResNet50.ipynb
+++ b/PlantPathology2020/ResNet50.ipynb
@@ -69,8 +69,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# path 설정\n",
     "path = \"/home/dmsai2/Desktop/AI-Study/PlantPathology2020/\"\n",
+    "# annotation 적힌 csv 파일\n",
     "train_csv = op(path, \"train.csv\")\n",
+    "# 이미지 파일 path\n",
     "train_path = op(path, \"images\", \"Train\")"
    ]
   },
@@ -81,6 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 학습시킬 이미지 파일 개수\n",
     "print(\"train:\", len(os.listdir(train_path)))\n",
     "n_train_data = len(os.listdir(train_path))"
    ]
@@ -123,6 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이미지 읽어서 단순히 224 224로 resize\n",
     "def read_image_resize(img_path, dsize=(224, 224)):\n",
     "    assert type(dsize) == tuple and len(dsize) == 2\n",
     "    img = cv2.imread(img_path)\n",
@@ -156,11 +161,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이미지 augmentation\n",
     "aug_cc = A.Compose([\n",
     "    A.HorizontalFlip(p=0.5),\n",
     "    A.VerticalFlip(p=0.5),\n",
     "    A.Rotate(limit=45, always_apply=True),\n",
-    "    \n",
     "    A.ShiftScaleRotate(scale_limit=(0.7, 0.9), rotate_limit=30, p=1),\n",
     "    A.RandomBrightnessContrast(brightness_limit=(-0.2, 0.2), contrast_limit=(-0.2, 0.2), p=0.5),\n",
     "    A.CenterCrop(height=1365, width=1365, p=1.0),\n",
@@ -176,6 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이미지 읽고 위 augmentation 적용하는 함수\n",
     "def read_image_centercrop(img_path, dsize=(224, 224)):\n",
     "    img = cv2.imread(img_path)\n",
     "    img = aug_cc(image=img)['image']\n",
@@ -213,10 +219,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이미지 읽을 때 변형해주는 함수\n",
     "tf = transforms.Compose([\n",
+    "    # 사이즈를 255 x 255로 변형\n",
     "    transforms.Resize(256),\n",
+    "    # 가운데 224 x 224를 잘라냄\n",
     "    transforms.CenterCrop(224),\n",
     "    # transforms.ToTensor(),\n",
+    "    # IMAGENET normalize\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
     "])"
    ]
@@ -224,7 +234,9 @@
   {
    "cell_type": "markdown",
    "id": "ca9b51e9-b090-4e1e-a6ba-370ea27e7bf7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### PyTorch Customized `Datasets` Class\n",
     "https://pytorch.org/tutorials/beginner/basics/data_tutorial.html"
@@ -257,6 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pytorch Datasets 클래스\n",
+    "# 데이터셋을 클래스 형태로 보관\n",
     "class PlantPathologyDataset(Dataset):\n",
     "    def __init__(self, annotations_file, img_dir, transform=None, target_transform=None, header=None):\n",
     "        self.img_labels = pd.read_csv(annotations_file)\n",
@@ -304,6 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 위 클래스로 데이터셋 생성\n",
+    "# annotation csv, 파일 경로, 위에서 정의한 transform 함께 넘김\n",
     "dataset = PlantPathologyDataset(train_csv, train_path, transform=tf)"
    ]
   },
@@ -322,6 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이미지 예시 보여주는 함수\n",
     "def show_images(data, is_test=False):\n",
     "    f, ax = plt.subplots(5, 5, figsize=(15, 10))\n",
     "    \n",
@@ -350,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show_images(dataset)"
+    "show_images(dataset)"
    ]
   },
   {
@@ -368,6 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 데이터셋을 학습용, 테스트용으로 분리\n",
     "dataset_size = len(dataset)\n",
     "train_size = int(dataset_size * 0.8)\n",
     "test_size = dataset_size - train_size"
@@ -401,6 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 배치 사이즈\n",
     "BATCH_SIZE = 64\n",
     "TEST_BATCH_SIZE = 16"
    ]
@@ -412,6 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 데이터 로더\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=TEST_BATCH_SIZE, shuffle=True, drop_last=True)"
    ]
@@ -613,6 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ResNet 모델 빌드하는 함수\n",
     "def build_resnet(input_shape=(3, 224, 224), is_50=True, is_plain=False, **kwargs):\n",
     "    x = torch.randn(2, *input_shape).to(device)\n",
     "    \n",
@@ -651,6 +672,7 @@
    },
    "outputs": [],
    "source": [
+    "# 모델 빌드\n",
     "res50 = build_resnet(is_plain=True, num_classes=4)"
    ]
   },
@@ -888,7 +910,8 @@
     "            \n",
     "            # y_train to one_hot_encoding\n",
     "            labels = F.one_hot(y_train, num_classes=4).double()\n",
-    "        \n",
+    "            \n",
+    "            # GPU용으로 변환\n",
     "            inputs = x_train.to(device)\n",
     "            labels = labels.to(device)\n",
     "\n",
